add multikey bindings, bspc bindings, new gif bindings, and add bindings/settings for dealing with subtitles

--- a/common/.mpv/input.conf
+++ b/common/.mpv/input.conf
@@ -43,25 +43,187 @@
 #default-bindings start
 # }}}
 
-# My Rebinds {{{
-n seek -5
-e seek 5
+# default bindings# {{{
+f cycle fullscreen # toggle fullscreen
+p cycle pause # toggle pause/playback mode
+m cycle mute
 
-h seek -15
-i seek 15
+# audio sync and adjustment
++ add audio-delay 0.100 # this changes audio/video sync
+- add audio-delay -0.100
+( add balance -0.1 # adjust audio balance in favor of left
+) add balance 0.1 # right
+# speed
+[ multiply speed 0.9091 # scale playback speed
+] multiply speed 1.1
+{ multiply speed 0.5
+} multiply speed 2.0
+BS set speed 1.0 # reset speed to normal
+# frame jump
+. frame_step # advance one frame and pause
+, frame_back_step # go back by one frame and pause
+# chapter
+! add chapter -1 # skip to previous chapter
+@ add chapter 1 # next
+
+# }}}
+# My Rebinds {{{
+# change subtitle font size
+V add sub-scale +0.1 # increase subtitle font size
+v add sub-scale -0.1 # decrease subtitle font size
+
+# Don't quit on Escape
+ESC ignore
+ENTER ignore
+# seeking
+n seek -1
+e seek 1
+h seek -5
+i seek 5
+
+t screenshot
 
 N add volume -1
 E add volume 1
 
+# scripts# {{{
+ 
+# gif making# {{{
+# run in fullscreen (records active window)
+O run /home/angelic_sedition/bin/mpv/ffmpeg_gif.sh
+# end recording
+o run pkill ffmpeg
+
+# old crap for making gif from file# {{{
+# need fullpath; use with actual video file
 # start timing for gif 
-o run /home/angelic_sedition/bin/mpv/mpv_gif.sh 1 ${time-pos} ${path}
+# o run /home/angelic_sedition/bin/mpv/mpv_gif.sh 1 ${time-pos} ${path}
 # end time for gif
-O run /home/angelic_sedition/bin/mpv/mpv_gif.sh 2 ${time-pos}
+# O run /home/angelic_sedition/bin/mpv/mpv_gif.sh 2 ${time-pos}
 # testing
-a run /home/angelic_sedition/bin/mpv/mpv_gif2.sh ${height} ${width} ${border}
+# a run /home/angelic_sedition/bin/mpv/mpv_gif2.sh ${height} ${width} ${border}
+# }}}
+# }}}
+# }}}
+
+#Multikey bindings# {{{
+# Must bind intermediates to ignore
+# unbind space
+SPACE ignore
+# space bindings# {{{
+# seek to specific precentage time?
+SPACE-a seek -50
+SPACE-r seek -25
+SPACE-s seek -10
+SPACE-t no-osd seek -5 - exact
+SPACE-d no-osd seek -1 - exact
+SPACE-h no-osd seek 1 - exact
+SPACE-n no-osd seek 5 - exact
+SPACE-e seek 10
+SPACE-i seek 25
+SPACE-o seek 50
+# }}}
+# wm experimentation#{{{
+# straight from vimrc
+# change " to #
+# remove nnoremap <silent> 
+# remove <cr>
+# change :silent ! to run 
+# add hyphens in between letters
+# full path for scripts
+# unbinds 
+r ignore
+R ignore
+r-c ignore
+r-m ignore
+s ignore
+s-p ignore
+
+# r is redraw#{{{
+# worskpace/Destkop switch#{{{
+r-a run bspc desktop -f ^1
+r-r run bspc desktop -f ^2
+r-s run bspc desktop -f ^3
+r-t run bspc desktop -f ^4
+r-d run bspc desktop -f ^5
+r-h run bspc desktop -f ^6
+r-n run bspc desktop -f ^7
+r-e run bspc desktop -f ^8
+r-i run bspc desktop -f ^9
+r-o run bspc desktop -f ^10
+#}}}
+# move to destkop#{{{
+R-a run bspc window -d ^1
+R-r run bspc window -d ^2
+R-s run bspc window -d ^3
+R-t run bspc window -d ^4
+R-d run bspc window -d ^5
+R-h run bspc window -d ^6
+R-n run bspc window -d ^7
+R-e run bspc window -d ^8
+R-i run bspc window -d ^9
+R-o run bspc window -d ^10
+#}}}
+
+# moving windows within desktop#{{{
+# move to biggest
+r-c-m run bspc window -s biggest
+# directions
+r-c-h run bspc window -s left
+r-c-n run bspc window -s down
+r-c-e run bspc window -s up
+r-c-i run bspc window -s right
+# circulate (changes focus)
+r-. run bspc desktop -C forward
+r-, run bspc desktop -C backward
+#}}}
+
+#resize#{{{
+r-m-h run /home/angelic_sedition/bin/resize.sh left
+r-m-n run /home/angelic_sedition/bin/resize.sh down
+r-m-e run /home/angelic_sedition/bin/resize.sh up
+r-m-i run /home/angelic_sedition/bin/resize.sh right
+#}}}
+# open urxvt
+r-u run urxvt &
+# close
+r-x run bspc window -c
 
 # }}}
 
+# s becomes select/Show/settings#{{{
+#select
+s-h run bspc window -f left
+s-n run bspc window -f down
+s-e run bspc window -f up
+s-i run bspc window -f right
+s-l run bspc window -f last
+
+# monocle toggle
+s-t run bspc desktop -l next
+s-s run bspc window -t sticky
+# this one is useless since already have a fullscreen binding
+s-f run bspc window -t fullscreen
+
+# gap up and down (put in script if ever want)
+# s-u run bspc config -d focused window_gap $((`bspc config -d focused window_gap` - 4 ))
+# s-d run bspc config -d focused window_gap $((`bspc config -d focused window_gap` + 4 ))
+
+# preselect#{{{
+s-p-h run bspc window -p left
+s-p-n run bspc window -p down
+s-p-e run bspc window -p up
+s-p-i run bspc window -p right
+s-p-x run bspc window -p cancel
+s-p-d run bspc desktop -c
+#}}}
+#}}}
+
+#}}}
+
+# }}}
+
+# default stuff:# {{{
 #MOUSE_BTN0 ignore # don't do anything
 #MOUSE_BTN0_DBL cycle fullscreen # toggle fullscreen on/off
 #MOUSE_BTN2 cycle pause # toggle pause on/off
@@ -235,3 +397,5 @@ a run /home/angelic_sedition/bin/mpv/mpv_gif2.sh ${height} ${width} ${border}
 # ? add sub-scale -0.1 # decrease subtitle font size
 # ? sub_step -1 # immediately display next subtitle
 # ? sub_step +1 # previous
+# # }}}
+# }}}
