add go to recent folder script; change ranger shell command back to default and create slowshell

--- a/common/.config/ranger/rc.conf
+++ b/common/.config/ranger/rc.conf
@@ -17,8 +17,8 @@
 # ===================================================================
 # }}}
 # TODO:
-# add bindings
-
+# add more bindings
+# Instead of sourcing big ass zshrc make a separate file for wanted functions
 # %s selected; %f highlighted
 
 # Settings# {{{
@@ -41,87 +41,93 @@ alias find scout -aets
 
 # move to trash
 #to trash with trash-cli instead of delete
-# map <DELETE> shell trash-put %f
-map DD shell mv -t /home/angelic_sedition/.local/share/Trash %s
+map D shell trash-put %f
+# map DD shell mv -t /home/angelic_sedition/.local/share/Trash %s
 
 # added commands:# {{{
 # change rotation; image rotate with imagemagick
-map cr shell mogrify -rotate 90 %f
-# map tu shell exd %s
+map cr slowshell mogrify -rotate 90 %f
+# extract and delete archive
+# map tu slowshell exd %s
 
 # link hinting in ranger
-map tf shell xdotool key control+shift+x
+map tf slowshell xdotool key control+shift+x
+
+# recently used folder; meh
+map gr shell ~/bin/ranger/recent_folders.sh database
+map gR shell ~/bin/ranger/recent_folders.sh ag-sys
 # }}}
 
+# WM Experimentation# {{{
 # straight from .vimrc; change nnoremap <silent> to "map"
 # change ":silent !" to "shell "
 # remove <cr>
 # change comment char to #
 # change shell binding
-# change to quickshell (sourcing zshrc is slow)
 # add -s
 # tmux experimentation#{{{
 # #r# is redraw#{{{
 # window switching#{{{
-map ra quickshell -s tmux select-window -t 1
-map rr quickshell -s tmux select-window -t 2
-map rs quickshell -s tmux select-window -t 3
-map rt quickshell -s tmux select-window -t 4
-map rd quickshell -s tmux select-window -t 5
-map rh quickshell -s tmux select-window -t 6
-map rn quickshell -s tmux select-window -t 7
-map re quickshell -s tmux select-window -t 8
-map ri quickshell -s tmux select-window -t 9
-map ro quickshell -s tmux select-window -t 10
+map ra shell -s tmux select-window -t 1
+map rr shell -s tmux select-window -t 2
+map rs shell -s tmux select-window -t 3
+map rt shell -s tmux select-window -t 4
+map rd shell -s tmux select-window -t 5
+map rh shell -s tmux select-window -t 6
+map rn shell -s tmux select-window -t 7
+map re shell -s tmux select-window -t 8
+map ri shell -s tmux select-window -t 9
+map ro shell -s tmux select-window -t 10
 #}}}
 # resize panes#{{{
-map rmh quickshell -s tmux resize-pane -L 10
-map rmn quickshell -s tmux resize-pane -D 10
-map rme quickshell -s tmux resize-pane -U 10
-map rmi quickshell -s tmux resize-pane -R 10
+map rmh shell -s tmux resize-pane -L 10
+map rmn shell -s tmux resize-pane -D 10
+map rme shell -s tmux resize-pane -U 10
+map rmi shell -s tmux resize-pane -R 10
 #}}}
 # circulate
 # previous
-map r, quickshell -s tmux swap-pane -U
+map r, shell -s tmux swap-pane -U
 # next
-map r. quickshell -s tmux swap-pane -D
+map r. shell -s tmux swap-pane -D
 
 # new session
-map r_ quickshell -s tmux new-session
+map r_ shell -s tmux new-session
 
 # new window 
-map rc quickshell -s tmux new-window
+map rc shell -s tmux new-window
 # kill pane
-map rx quickshell -s tmux kill-pane
+map rx shell -s tmux kill-pane
 # last window 
-map rl quickshell -s tmux last-window
+map rl shell -s tmux last-window
 # split windows
-map r/ quickshell -s tmux split-window -h
-map r- quickshell -s tmux split-window
+map r/ shell -s tmux split-window -h
+map r- shell -s tmux split-window
 
 # break pane
-map r! quickshell -s tmux break-pane
+map r! shell -s tmux break-pane
 #}}}
 
 # #s# is select#{{{
 # panes#{{{
 # directions
-map sh quickshell -s tmux select-pane -L
-map sn quickshell -s tmux select-pane -D
-map se quickshell -s tmux select-pane -U
-map si quickshell -s tmux select-pane -R
+map sh shell -s tmux select-pane -L
+map sn shell -s tmux select-pane -D
+map se shell -s tmux select-pane -U
+map si shell -s tmux select-pane -R
 # last
-map sl quickshell -s tmux select-pane -l
+map sl shell -s tmux select-pane -l
 # select layout
-map sv quickshell -s tmux select-layout main-vertical
+map sv shell -s tmux select-layout main-vertical
 
 # toggle #monocle# (zoom)
-map st quickshell -s tmux resize-pane -Z
+map st shell -s tmux resize-pane -Z
 #}}}
 
 # select session
-map ss quickshell -s tmux choose-client
+map ss shell -s tmux choose-client
 #}}}
+# }}}
 #}}}
  
 # General# {{{
@@ -132,8 +138,8 @@ copycmap <c-w> ¸
 # leader maps# {{{
 # reload ranger mappings
 map t. source ~/.config/ranger/rc.conf
-# new shell (change to something more convenient)
-map ts console shell 
+# add back sorting bindings
+map o console shell 
 # map td console delete
 # map td shell trash-put %s
 map tm tag_toggle
@@ -154,8 +160,8 @@ copymap <HOME>     gg
 copymap <END>      G
 copymap <PAGEDOWN> to
 copymap <PAGEUP>   tk
-pmap  tk       pager_move  down=0.5  pages=True
-pmap  to       pager_move  up=0.5    pages=True
+pmap  to       pager_move  down=0.5  pages=True
+pmap  tk       pager_move  up=0.5    pages=True
 map k  search_next
 map K search_next forward=False
 # }}}
@@ -437,7 +443,7 @@ map gm cd /media
 map gM cd /mnt
 map gs cd /srv
 # run instead of root
-map gr cd /run
+# map gr cd /run
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
@@ -523,24 +529,24 @@ map <a-7>     tab_open 7
 map <a-8>     tab_open 8
 map <a-9>     tab_open 9
 
-# Sorting
-map or toggle_option sort_reverse
-map os chain set sort=size;      set sort_reverse=False
-map ob chain set sort=basename;  set sort_reverse=False
-map on chain set sort=natural;   set sort_reverse=False
-map om chain set sort=mtime;     set sort_reverse=False
-map oc chain set sort=ctime;     set sort_reverse=False
-map oa chain set sort=atime;     set sort_reverse=False
-map ot chain set sort=type;      set sort_reverse=False
-
-map oS chain set sort=size;      set sort_reverse=True
-map oB chain set sort=basename;  set sort_reverse=True
-map oN chain set sort=natural;   set sort_reverse=True
-map oM chain set sort=mtime;     set sort_reverse=True
-map oC chain set sort=ctime;     set sort_reverse=True
-map oA chain set sort=atime;     set sort_reverse=True
-map oT chain set sort=type;      set sort_reverse=True
-
+# Sorting# {{{
+# map or toggle_option sort_reverse
+# map os chain set sort=size;      set sort_reverse=False
+# map ob chain set sort=basename;  set sort_reverse=False
+# map on chain set sort=natural;   set sort_reverse=False
+# map om chain set sort=mtime;     set sort_reverse=False
+# map oc chain set sort=ctime;     set sort_reverse=False
+# map oa chain set sort=atime;     set sort_reverse=False
+# map ot chain set sort=type;      set sort_reverse=False
+#
+# map oS chain set sort=size;      set sort_reverse=True
+# map oB chain set sort=basename;  set sort_reverse=True
+# map oN chain set sort=natural;   set sort_reverse=True
+# map oM chain set sort=mtime;     set sort_reverse=True
+# map oC chain set sort=ctime;     set sort_reverse=True
+# map oA chain set sort=atime;     set sort_reverse=True
+# map oT chain set sort=type;      set sort_reverse=True
+# }}}
 map dc get_cumulative_size
 
 # Settings
