--- a/remap/.empty_sxhkdrc
+++ b/remap/.empty_sxhkdrc
@@ -3,7 +3,7 @@ super + Escape
     pkill sxhkd && sxhkd
 
 # desktop switching
-r ; {a,r,s,t,d,h,n,e,i,o}
+{a,r,s,t,d,h,n,e,i,o}
     bspc desktop -f ^{1-9,10}
 
 super + {_,shift + }{1-9,0}
@@ -19,13 +19,13 @@ Return
 # dmenu stuff
 
 # program opening (2 keys so less likely to accidentally open; will test single keys later)
-o ; f
+semicolon ; f
 	firefox
 
-o ; a
+semicolon ; a
 	apvlv
 
-o ; {g,v}
+semicolon ; {g,v}
 	{gvim,gvim}
 
 # keep bindings# {{{
