--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -42,6 +42,8 @@
 # If this is enabled, treat all the following bindings as default.
 #default-bindings start
 # }}}
+# TODO:
+# o to stop
 
 # default bindings# {{{
 f cycle fullscreen # toggle fullscreen
@@ -75,13 +77,24 @@ v add sub-scale -0.1 # decrease subtitle font size
 # Don't quit on Escape
 ESC ignore
 ENTER ignore
+
 # seeking
 n seek -1
 e seek 1
 h seek -5
 i seek 5
 
+# pause and play
+o cycle pause
+
+# screen shots
 t screenshot
+T screenshot video # ...without subtitles
+
+# zooming/kind of
+z ignore
+z-o add panscan -0.1 # zoom out with -panscan 0 -fs
+z-i add panscan +0.1 # in
 
 N add volume -1
 E add volume 1
@@ -90,9 +103,9 @@ E add volume 1
  
 # gif making# {{{
 # run in fullscreen (records active window)
-O run /home/angelic_sedition/bin/mpv/ffmpeg_gif.sh
+# O run /home/angelic_sedition/bin/mpv/ffmpeg_gif.sh
 # end recording
-o run pkill ffmpeg
+# o run pkill ffmpeg
 
 # old crap for making gif from file# {{{
 # need fullpath; use with actual video file
@@ -123,6 +136,7 @@ SPACE-e seek 10
 SPACE-i seek 25
 SPACE-o seek 50
 # }}}
+# for both tmux and bspwm; except no rc for tmux
 # wm experimentation#{{{
 # straight from vimrc
 # change " to #
@@ -141,28 +155,28 @@ s-p ignore
 
 # r is redraw#{{{
 # worskpace/Destkop switch#{{{
-r-a run bspc desktop -f ^1
-r-r run bspc desktop -f ^2
-r-s run bspc desktop -f ^3
-r-t run bspc desktop -f ^4
-r-d run bspc desktop -f ^5
-r-h run bspc desktop -f ^6
-r-n run bspc desktop -f ^7
-r-e run bspc desktop -f ^8
-r-i run bspc desktop -f ^9
-r-o run bspc desktop -f ^10
+r-a run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh a
+r-r run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh r
+r-s run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh s
+r-t run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh t
+r-d run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh d
+r-h run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh h
+r-n run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh n
+r-e run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh e
+r-i run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh i
+r-o run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh o
 #}}}
 # move to destkop#{{{
-R-a run bspc window -d ^1
-R-r run bspc window -d ^2
-R-s run bspc window -d ^3
-R-t run bspc window -d ^4
-R-d run bspc window -d ^5
-R-h run bspc window -d ^6
-R-n run bspc window -d ^7
-R-e run bspc window -d ^8
-R-i run bspc window -d ^9
-R-o run bspc window -d ^10
+R-a run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh A
+R-r run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh R
+R-s run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh S
+R-t run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh T
+R-d run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh D
+R-h run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh H
+R-n run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh N
+R-e run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh E
+R-i run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh I
+R-o run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh O
 #}}}
 
 # moving windows within desktop#{{{
@@ -174,40 +188,51 @@ r-c-n run bspc window -s down
 r-c-e run bspc window -s up
 r-c-i run bspc window -s right
 # circulate (changes focus)
-r-. run bspc desktop -C forward
-r-, run bspc desktop -C backward
+r-. run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh
+r-, run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh
 #}}}
 
 #resize#{{{
-r-m-h run /home/angelic_sedition/bin/resize.sh left
-r-m-n run /home/angelic_sedition/bin/resize.sh down
-r-m-e run /home/angelic_sedition/bin/resize.sh up
-r-m-i run /home/angelic_sedition/bin/resize.sh right
+r-m-h run /home/angelic_sedition/bin/tmux_or_bspc.sh rmh
+r-m-n run /home/angelic_sedition/bin/tmux_or_bspc.sh rmn
+r-m-e run /home/angelic_sedition/bin/tmux_or_bspc.sh rme
+r-m-i run /home/angelic_sedition/bin/tmux_or_bspc.sh rmi
 #}}}
 # open urxvt
 r-u run urxvt &
 # close
-r-x run bspc window -c
+r-x run /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh rx
 
+# terminal only bindings# {{{
+# if running audio in terminal
+r-_ run tmux new-session
+r-l run tmux select-window -l
+r-/ run tmux split-window -h
+r-' run tmux split-window -h
+# r-- run tmux split window
+r-! run tmux break-pane
+# }}}
 # }}}
 
 # s becomes select/Show/settings#{{{
 #select
-s-h run bspc window -f left
-s-n run bspc window -f down
-s-e run bspc window -f up
-s-i run bspc window -f right
-s-l run bspc window -f last
+s-h run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sh
+s-n run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sn
+s-e run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh se
+s-i run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh si
+s-l run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sl
 
 # monocle toggle
-s-t run bspc desktop -l next
+s-t run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh st
+
 s-s run bspc window -t sticky
-# this one is useless since already have a fullscreen binding
+
+# for tmux (already have f in gui mpv)
 s-f run bspc window -t fullscreen
 
-# gap up and down (put in script if ever want)
-# s-u run bspc config -d focused window_gap $((`bspc config -d focused window_gap` - 4 ))
-# s-d run bspc config -d focused window_gap $((`bspc config -d focused window_gap` + 4 ))
+# gap up and down (put in a script if ever want)
+s-u run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh su
+s-U run sh /home/angelic_sedition/bin/mpv/tmux_or_bspc.sh sU
 
 # preselect#{{{
 s-p-h run bspc window -p left
@@ -312,8 +337,6 @@ s-p-d run bspc desktop -c
 #s screenshot # take a screenshot
 #S screenshot video # ...without subtitles
 #Alt+s screenshot - each-frame # automatically screenshot every frame
-#w add panscan -0.1 # zoom out with -panscan 0 -fs
-#e add panscan +0.1 # in
 #POWER quit
 #MENU cycle osd
 #PLAY cycle pause
